fix hyperlink overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 	font-family: Raleway;
 }
 
+a {
+	word-wrap: break-word;
+}
+
 a:link,a:visited {
 	color: #444;
 }
